# simplicialpy

./: Cargo.toml  README.md  pyproject.toml
simplicialpy/: __init__.py  simplicialpy.pyi  types.py
src/: lib.rs  simplicial_complex.py
