[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "simplicialpy"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
description = "Simplicial topology python package built in Rust."
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/lm7272/simplicialpy"

[tool.maturin]
features = ["pyo3/extension-module"]

# Include pyi files in the package
include = ["simplicialpy/*.pyi"]
